fix wrap issue

--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -10,6 +10,7 @@
     padding: 12rem 12rem 1rem 12rem;
   }
   @media(min-width:1100px){
+    padding: 12rem 4rem 1rem 4rem;
     min-height: 800;
     max-height: 1200px;
   }
